[package]
name = "rust_iss"
edition = "2024"

[[bin]]
name = "rust_iss"
path = "src/main.rs"


[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
axum = "0.6"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

reqwest = { version = "0.11", features = [
    "json",
    "gzip",
    "brotli",
    "deflate",
    "rustls-tls"
] }

sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "json",
    "chrono"
] }

dotenvy = "0.15"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"

redis = "0.24"
deadpool-redis = "0.14"

uuid = { version = "1", features = ["v4", "serde"] }

tower = "0.4"
tower-http = { version = "0.4", features = [
    "trace",
    "cors",
    "compression-br",
    "compression-gzip"
] }

# 🔥 КРИТИЧЕСКИЙ ФИКС:
# Deadpool-redis тянет новую версию home (0.5.12) — она требует edition2024 и ломает сборку.
# Мы принудительно закрепляем рабочую версию home.
home = "=0.5.5"
